# malbrid

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
examples/: Bouncing_Ball.ipynb  Bouncing_Ball.py  DampedOrbit.ipynb  DampedOrbit.py  DampedOrbitWithOccasionalAcceleration-SlowingDown.ipynb  DampedOrbitWithOccasionalAcceleration-SlowingDown.py  DampedOrbitWithOccasionalAcceleration-SpeedingUp.ipynb  DampedOrbitWithOccasionalAcceleration-SpeedingUp.py  Paddle_Ball-Reinforcement-Learning.ipynb  Paddle_Ball.ipynb  Paddle_Ball.py  SlightlyRandomizedHeater.ipynb  SlightlyRandomizedHeater.py
src/malbrid/: __init__.py  malbrid.py
tests/: malbrid_tests.py
