[metadata]
name = malbrid
version = 0.0.4
license = 3-Clause BSD
description = A Linear Hybrid System/Automaton Verification Library for Python
long_description = file: README.rst
author = Ruediger Ehlers
author_email = mail2023@ruediger-ehlers.de
classifiers=
   Intended Audience :: Science/Research

[options]
packages = find:
package_dir = 
  =src
include_package_data = True

[options.packages.find]
where=src
