[metadata]
name = malbrid
version = attr: malbrid.__version__
license = 3-Clause BSD
description = A Linear Hybrid System/Automaton Verification Library for Python
long_description = file: README.rst
author = Ruediger Ehlers
python_requires='>=3'
url=https://github.com/tuc-es/malbrid
author_email = mail2023@ruediger-ehlers.de
classifiers=
   Intended Audience :: Science/Research

[options]
packages = find:
package_dir = 
  =src
include_package_data = True

[options.packages.find]
where=src
